--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,18 +33,18 @@ android {
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-  implementation 'androidx.appcompat:appcompat:1.2.0'
-  implementation 'androidx.core:core-ktx:1.3.2'
-  implementation "androidx.constraintlayout:constraintlayout:2.0.4"
-  implementation 'com.google.android.material:material:1.3.0'
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
-  implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
-  implementation "androidx.recyclerview:recyclerview:1.1.0"
-  implementation "androidx.activity:activity-ktx:1.2.0"
-  implementation "androidx.fragment:fragment-ktx:1.3.0"
-  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-  implementation "com.github.bumptech.glide:glide:4.11.0"
+  implementation ("org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version")
+  implementation ("androidx.appcompat:appcompat:1.2.0")
+  implementation ("androidx.core:core-ktx:1.3.2")
+  implementation ("androidx.constraintlayout:constraintlayout:2.0.4")
+  implementation ("com.google.android.material:material:1.3.0")
+  implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version")
+  implementation ("org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version")
+  implementation ("androidx.recyclerview:recyclerview:1.1.0")
+  implementation ("androidx.activity:activity-ktx:1.2.2")
+  implementation ("androidx.fragment:fragment-ktx:1.3.2")
+  implementation ("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
+  implementation ("com.github.bumptech.glide:glide:4.11.0")
 
   // Retrofit / networking
   implementation ("com.squareup.retrofit2:retrofit:$retrofit_version")
@@ -52,4 +52,14 @@ dependencies {
   implementation("com.squareup.retrofit2:converter-jaxb:2.9.0")
   implementation ("com.squareup.okhttp3:okhttp:4.8.1")
   implementation ("com.squareup.okhttp3:logging-interceptor:4.8.1")
+
+  // Room
+  implementation ("androidx.room:room-common:$room_version")
+  kapt ("androidx.room:room-compiler:$room_version")
+  implementation ("androidx.room:room-runtime:$room_version")
+  // Kotlin Extensions and Coroutines support for Room
+  implementation ("androidx.room:room-ktx:$room_version")
+
+  // WorkManager
+  implementation "androidx.work:work-runtime-ktx:2.5.0"
 }
