--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@
 buildscript {
 
     ext {
+        room_version = '2.2.6'
         kotlin_version = '1.4.31'
         coroutines_version = '1.4.2'
         retrofit_version = '2.9.0'
